# compas_cnc

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  screenshots.py  sitemap.xml  tasks.py
.github/workflows/: build.yml  docs.yml  release.yml
api/compas_cnc.postprocessor.Postprocessor/: index.html
api/compas_cnc.toolpath_2d_drill/: index.html
api/compas_cnc.toolpath_2d_hatch/: index.html
api/compas_cnc.toolpath_2d_ramp/: index.html
api/compas_cnc.toolpath_2d_surfacing/: index.html
api/compas_cnc.toolpath_merge/: index.html
api/compas_cnc.tools.Tool/: index.html
data/: _viewer_scene.json  cantilevers_model.json  clamp_1.stp  clamp_1.stpbak  clamp_2.stp  clamp_2.stpbak  clamp_3.stp  clamp_3.stp.lz  clamp_3.stpbak  cnc_table.dxf  cnc_table_holes.dxf  column_fab_a.nc.lz  column_fab_a_3mm.nc  column_fab_a_3mm.nc.lz  column_fab_a_6mm.nc  column_fab_a_6mm.nc.lz  column_fab_a_6mm.nc.lz.lz.lz  column_fab_a_rhino.json  column_fab_b.nc  column_fab_b.nc.lz  column_fab_b_rhino.json  column_fab_rhino.json  connectors_fab_rhino.json  custom_tool_path_connectors.json  custom_toolpath_inner_beams.json  custom_toolpath_inner_ribs.json  custom_toolpath_outer_ribs.json  custom_toolpath_tsections.json  custom_toolpath_wedges.json  oculus_fab_model.json  oculus_fab_rhino.json  quarter_bed_fab_rhino.json  quarter_bed_toolpaths.json  quarter_connectors_fab_model.json  quarter_fab_model.json  quarter_frame_fab_model.json  quarter_frame_fab_rhino.json
data/Custom_Cutting_Connectors/: connectors_a_6mm.nc  connectors_a_6mm.nc.lz  connectors_b_2mm.nc  geometry.stp
data/custom_tool_path_connectors/: 2_surfacing_6mm.objbak  3_ramp_with_stop_points.objbak  4_geometry.objbak  connectors_1_table_6mm.nc  connectors_2_surfacing_6mm.nc  connectors_2mm.nc  connectors_2mm.nc.lz  connectors_3_cut_2mm.nc
data/custom_tool_path_connectors_aluminium_2mm/: connectors_aluminium_2mm.nc  custom_tool_path_connectors_aluminium_2mm_geometry.stp
data/custom_tool_path_connectors_aluminium_3mm/: connectors_aluminium_3mm.nc  custom_tool_path_connectors_aluminium_3mm.stp
data/custom_toolpath_inner_beams/: custom_toolpath_inner_beams_3_175mm.nc  custom_toolpath_inner_beams_6mm.nc  custom_toolpath_inner_ribs.stp  custom_toolpath_inner_ribs_part1_6mm_surfacing.objbak
data/custom_toolpath_inner_ribs/: custom_toolpath_inner_ribs.stp  custom_toolpath_inner_ribs_3_175mm.nc  custom_toolpath_inner_ribs_6mm.nc  custom_toolpath_inner_ribs_part1_6mm_surfacing.objbak  custom_toolpath_inner_ribs_part2_3_175mm_surfacing.objbak  custom_toolpath_inner_ribs_part3_3_175mm_ramp.objbak
data/custom_toolpath_outer_ribs/: custom_toolpath_outer_ribs.stp  custom_toolpath_outer_ribs_3_175mm.nc  custom_toolpath_outer_ribs_6mm.nc  custom_toolpath_outer_ribs_part1_6mm_surfacing.objbak  custom_toolpath_outer_ribs_part_2_3_175mm_surfacing.objbak  custom_toolpath_outer_ribs_part_3_3_175mm_ramp.objbak
data/custom_toolpath_tsections/: custom_toolpath_tsections.stp  custom_toolpath_tsections_3_175mm.nc  custom_toolpath_tsections_6mm.nc  custom_toolpath_tsections_part1_6mm_surfacing.objbak
data/custom_toolpath_wedges/: custom_toolpath_wedges.stp  custom_toolpath_wedges_6mm.nc  custom_toolpath_wedges_part1_6mm_surfacing.objbak  custom_toolpath_wedges_part2_6mm_surfacing.objbak  custom_toolpath_wedges_part3_3_175mm_ramp.objbak  custom_toolpath_wedges_part3_6mm_ramp.objbak
docs/: api.rst  conf.py  index.md  index.rst  installation.md  installation.rst
docs/api/: compas_cnc.postprocessor.Postprocessor.md  compas_cnc.rst  compas_cnc.toolpath_2d_drill.md  compas_cnc.toolpath_2d_hatch.md  compas_cnc.toolpath_2d_ramp.md  compas_cnc.toolpath_2d_surfacing.md  compas_cnc.toolpath_merge.md  compas_cnc.tools.Tool.md
docs/examples/toolpaths/: drilling.md  hatching.md  hatching.py  hatching_layered.md  merging.md  postprocessing.md  ramping.md  surfacing.md  surfacing.py
examples/: _convert_stp_to_mesh.py  _custom_toolpath.py  example_clipper2_offset_hatch.py  exmple_model_12_fab_column.py  exmple_model_12_fab_column_a.py  exmple_model_12_fab_column_b.py  exmple_model_13_fab_oculus.py  exmple_model_14_fab_quarter_bed.py  exmple_model_14_fab_quarter_frame.py  exmple_model_16_fab_connectors.py  exmple_model_17_fab_column_and_beam_connectors.py  exmple_model_18_fab_inner_beams.py  exmple_model_19_fab_inner_ribs.py  exmple_model_20_fab_outer_ribs.py  exmple_model_21_fab_tsections.py  exmple_model_22_fab_wedges.py  exmple_model_23_fab_aluminium_connectors_2mm.py  exmple_model_24_fab_aluminium_connectors_3mm.py
examples/toolpaths/: drilling.py  hatching_layered.py  merging.py  postprocessing.py  ramping.py
examples/toolpaths/drilling/: index.html
examples/toolpaths/hatching/: index.html
examples/toolpaths/hatching_layered/: index.html
examples/toolpaths/merging/: index.html
examples/toolpaths/postprocessing/: index.html
examples/toolpaths/ramping/: index.html
examples/toolpaths/surfacing/: index.html
installation/: index.html
license/: index.html
search/: search_index.json
src/: clipper2.cpp
src/compas_cnc/: __init__.py  _milling.py  clipper2.py  dxf.py  helix_drill.py  postprocessor.py  ramp_line.py  ramp_path.py  toolpath.py  toolpath_2d_drill.py  toolpath_2d_hatch.py  toolpath_2d_ramp.py  toolpath_2d_surfacing.py  toolpath_merge.py  tools.py
tests/: test_clipper2.py  test_milling_direction.py  test_toolpath_helix.py
